
package protos;

import "PB_base_data.proto";
import "PB_statistics_data.proto";
import "PB_error_code.proto";

// 系统广播
message PBS_SysBroadcast 
{
	optional PB_PhpBroadcast php_bc = 1;	// 系统广播php
	optional string channel = 2;
}

message PBS_SysBroadcastReturn
{
	required PB_ErrorCode code = 1;
}

// 全服邮件
message PBS_SendEmail2All
{
	optional PB_Email send_email = 1;	// 发送邮件
	optional string channel 	 = 2;	// 发送渠道
}

message PBS_SendEmail2AllReturn
{
	required PB_ErrorCode code = 1;
}

// 白名单
message PBS_AddWhiteList
{
	required string account_name = 1;
}

message PBS_AddWhiteListReturn
{
	required PB_ErrorCode code = 1;
}

// 设置服务状态
message PBS_SetServerState
{
	required int32 state = 1 ;	 		// 1 正常 2 停服 3 仅限白名单
	optional string channel = 2;		// 渠道
	optional int32 after_second = 3;	// 多少秒之后执行停服操作, 0 为立即执行
}

message PBS_SetServerStateReturn
{
	required PB_ErrorCode code = 1;
}

// 获取游戏数值统计
message PBS_GetGameNumerical
{
}

message PBS_GetGameNumericalReturn
{
	required PB_ErrorCode code = 1;
	optional RPB_GameNumerical data = 2; 
}

// 更改数值数据
message PBS_gm_numerical_op
{
	message data {
		required string key = 1; 		// bomb_cu_pool, bomb_ag_pool, bomb_au_pool, fish_card_pool
		required int64 value = 2;
	}
	repeated data set_data = 1;
	repeated data add_data = 2;
}
